[project]
name = "lin511py"
version = "0.1.0"
description = "Some useful functions for lin511"
packages = [{include = "lin511py", from="src"}]
authors = [
    {name = "Josef Fruehwald"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gutenbergpy>=0.3.5",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "gutenbergpy>=0.3.5",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
]


[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
